# Jet-Partitioner-official-fork

./: CMakeLists.txt  ExperimentLoggerUtil.hpp  README.md  binary_dump.hpp  contract.hpp  defs.h  driver.cpp  experiment_data.hpp  heuristics.hpp  import_coarse.cpp  initial_partition.hpp  io.hpp  jet.cpp  jet.h  jet_config.h  jet_defs.h  jet_refiner.hpp  part_eval.cpp  part_stat.hpp  partition.cpp  partitioner.hpp  setup_gpu.sh  setup_mac.sh  uncoarsen.hpp
app/: CMakeLists.txt  driver.cpp  import_coarse.cpp  io.hpp
cmake/: jetConfig.cmake
header/: experiment_data.hpp  jet.h  jet_defs.h  part_eval.cpp
src/: CMakeLists.txt  heuristics.hpp  jet.cpp  jet_big.cpp  jet_biggest.cpp  jet_refiner.hpp  part_stat.hpp  partitioner.hpp  uncoarsen.hpp
